src/hpke/snapshots/vodozemac__hpke__recipient__tests__snapshot_debug.snap
---
source: src/hpke/recipient.rs
expression: bob
---
HpkeRecipientChannel {
    our_public_key: "curve25519:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
    application_info_prefix: "MATRIX_QR_CODE_LOGIN",
    ..
}
