src/hpke/snapshots/vodozemac__hpke__recipient__tests__snapshot_debug_unidirectional_channel-2.snap
---
source: src/hpke/recipient.rs
expression: bob
---
UnidirectionalRecipientChannel {
    application_info_prefix: "MATRIX_QR_CODE_LOGIN",
    their_public_key: "curve25519:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
    our_public_key: "curve25519:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
    ..
}
