src/hpke/snapshots/vodozemac__hpke__recipient__tests__snapshot_debug_unidirectional_channel.snap
---
source: src/hpke/recipient.rs
expression: bob
---
HpkeRecipientChannel {
    our_public_key: "curve25519:qizKqCTtBqc0Ca9HbwFmq3+LJdyMIVnmYaBx3WBXizA",
    application_info_prefix: "MATRIX_QR_CODE_LOGIN",
    ..
}
